# OpenGL-GLSL

./: .gitignore  CMakeLists.txt  README.md  main.cpp
Common/: Common.h  Context.h  ShaderLoader.h
Rendering/: Context.h  GLSLProgram.h  Rendering.h
Shaders/: BlobInSq.frag  BlobInSq.vert  basic.frag  basic.vert
Source/: Context.cpp  GLSLProgram.cpp  ShaderLoader.cpp
